caso1/infra.yaml
#T* Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ruggeriml-dev
  name: mstream-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ruggeriml-mstream.my.kube.um.edu.ar
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mstream-service
            port:
              number: 80

# .um.edu.ar
---

#T* Service
apiVersion: v1
kind: Service
metadata:
  namespace: ruggeriml-dev
  name: mstream-service
  labels:
    app: mstream

spec:
  selector:
    app: mstream
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000

---

#T* StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: ruggeriml-dev
  name: mstream-statefulset
  labels:
    app: mstream

spec:
  serviceName: "mstream"
  replicas: 1
  selector:
    matchLabels:
      app: mstream

  template:
    metadata:
      labels:
        app: mstream

    spec:

      containers:
      - name: mstream
        image: linuxserver/mstream:5.12.2
        ports:
        - containerPort: 3000

        volumeMounts:
        - name: music-storage
          mountPath: /music

  volumeClaimTemplates:
  - metadata:
      name: music-storage
      labels:
        app: mstream
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi
  
  # - metadata:
  #     name: config-storage
  #     labels:
  #       app: mstream
  #   spec:
  #     accessModes: ["ReadWriteOnce"]
  #     resources:
  #       requests:
  #         storage: 1Gi
